# molgenis-emx2

./: .dockerignore  .env-example  .env-sample  .gitignore  .releaserc  .sonarcloud.properties  .travis.yml  ACKNOWLEDGEMENTS.md  CONTRIBUTING.md  DEVELOP.md  Dockerfile  Jenkinsfile  Jenkinsfile.DISABLED  NOTICE.md  README.md  ROADMAP.md  SECURITY.md  WALKTHROUGH.md  azure-pipelines.yml  build.gradle  changelog-notes.tpl  dev-preflight  docker-compose.yml  docker-publish.sh  entrypoint.sh  gradle.properties  gradlew  maven-settings.xml  molgenis-emx2.schema.example.yaml  molgenis-emx2.schema.json  package.json  pet-store.ttl  playwright.config.ts  pmd_ruleset.xml  pom.xml  pre-commit  pre-commit-format-apply  pre-commit-format-check  pre-push-hook  renovate.json  (+2 more)
tools/directory/: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  Pipfile  README.md  bump-version.sh  pyproject.toml  setup.cfg  setup.py  tox.ini
tools/directory-client/: .gitignore  .isort.cfg  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  Pipfile  README.md  setup.cfg  setup.py
tools/directory-client/dev/: dev.py
tools/directory-client/src/molgenis_emx2/directory_client/: __init__.py  bbmri_client.py  categories.py  eric.py  errors.py  model.py  model_fitting.py  pid_manager.py  pid_service.py  printer.py  publication_preparer.py  publisher.py  stager.py  transformer.py  utils.py  validation.py
tools/directory-client/tests/: conftest.py  test_categories.py  test_eric.py  test_errors.py  test_model_fitting.py  test_pid_manager.py  test_pid_service.py  test_publication_preparer.py  test_publisher.py  test_stager.py  test_transformer.py  test_utils.py  test_validator.py
tools/directory/dev/: .env_example  dev.py
tools/directory/src/molgenis_emx2/directory_client/: __init__.py  categories.py  directory.py  directory_client.py  errors.py  model.py  model_fitting.py  pid_manager.py  pid_service.py  printer.py  publication_preparer.py  publisher.py  stager.py  (+3 more)
tools/directory/tests/: conftest.py  test_categories.py  test_directory.py  test_eric.py  test_errors.py  test_model.py  test_model_fitting.py  test_pid_manager.py  test_pid_service.py  test_printer.py  test_publication_preparer.py  test_publisher.py  test_stager.py  test_transformer.py  test_utils.py  test_validator.py
tools/directory/tests/resources/: also_known.json  biobanks.json  collections.json  facts.json  networks.json  persons.json  services.json  studies.json
tools/hpc-daemon/: README.md  demo-config.yaml  pyproject.toml
tools/hpc-daemon/e2e/: .gitignore  Makefile  README.md  conftest.py  pytest.ini  refresh_secret.py  test_01_worker.py  test_02_lifecycle.py  test_03_failure.py  test_04_cancellation.py  test_05_posix_artifacts.py  test_06_artifact_roundtrip.py  test_07_delete_requires_cancel.py  test_08_nested_output_paths.py  test_09_apptainer.py
tools/hpc-daemon/e2e/scripts/: e2e_job.sh  e2e_job_apptainer.sh  e2e_job_fail.sh  e2e_job_posix.sh  e2e_job_slow.sh  e2e_job_transform.sh
tools/hpc-daemon/e2e/vm/: Vagrantfile  hpc-e2e-preflight.sh  provision.sh
tools/hpc-daemon/scripts/: apptainer_run.sh
tools/hpc-daemon/src/emx2_hpc_daemon/: __init__.py  _generated.py  auth.py  backend.py  backend_shell.py  backend_simulated.py  backend_slurm.py  cli.py  client.py  config.py  daemon.py  daemon_artifacts.py  daemon_monitor.py  daemon_progress.py  hashing.py  profiles.py  slurm.py  testkit.py  tracker.py
tools/hpc-daemon/tests/: TEST_ARCHITECTURE.md  conftest.py  mock_slurm.py  test_backend.py  test_client.py  test_contract.py  test_daemon.py  test_daemon_artifacts.py  test_daemon_scenarios.py  test_mock_slurm.py  test_profiles.py  test_shell_backend.py  test_slurm.py  test_state_machine.py  test_tracker.py
tools/ontomanager/: README.md  pyproject.toml  requirements.txt
tools/ontomanager/demos/: demo_csv.py  demo_csv_upload.py  demo_ontomanager.py  demo_search.py
tools/ontomanager/demos/data/: Countries.csv
tools/ontomanager/dev/: dev_csv_upload.py  dev_ontomanager.py  dev_search.py
tools/ontomanager/dev/data/: Countries.csv  update.csv
tools/ontomanager/src/molgenis_emx2_ontomanager/: OntologyManager.py  __main__.py  constants.py  exceptions.py  graphql_queries.py  utils.py
tools/ontomanager/src/molgenis_ontomanager/: OntologyManager.py  __init__.py  __main__.py
tools/ontomanager/src/ontomanager/: OntologyManager.py  __init__.py  __main__.py  exceptions.py  graphql_queries.py  manager.py  pyproject.toml
tools/ontomanager/tests/: test_create.py
tools/pyclient/: .bumpversion.cfg  .env_example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
tools/pyclient/dev/: Organisations.csv  Resources.csv  catalogue.csv  dev.py  directory-ref.py  eric_rls_setup.py  graphql_data.py  upload_file.py  upload_molgenis_csv.py
tools/pyclient/dev/demodata/: Pet.csv  Tag.csv
tools/pyclient/molgenis/: client.py  utils.py
tools/pyclient/src/molgenis/: __init__.py  __main__.py  client.py
tools/pyclient/src/molgenis_emx2_client/: __main__.py  client.py
tools/pyclient/src/molgenis_emx2_pyclient/: __init__.py  _client.py  client.py  client2.py  constants.py  data_classes.py  exceptions.py  graphql.py  graphql_queries.py  metadata.py  utils.py
tools/pyclient/tests/: .env-example  main.py  test_client.py  test_creation.py  test_data_manipulations.py  test_exports.py  test_get.py  test_get_graphql.py  test_save_schema.py  test_save_table.py  test_schema_manipulations.py  test_schema_metadata.py
tools/staging_migrator/: .gitignore  README.md  pyproject.toml  requirements.txt
tools/staging_migrator/dev/: .env-example  delete_resource.py  delete_resources.py  dev.py  migrate_UMCG.py  migrate_cohorts.py  migrate_datasources.py  migrate_networks.py  migrate_umcg.py  publish_resources.py
tools/staging_migrator/src/molgenis_emx2_staging_migrator/: SyncTables.py  __init__.py  __main__.py  constants.py  exceptions.py  graphql_queries.py  migrator.py  utils.py
tools/staging_migrator/src/tests/: test_organisations.py  test_utils.py  tests.py  utils.py
(+10548 files in other folders)
