# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = molgenis-emx2-directory-client
description = MOLGENIS EMX2 Python tooling for a BBMRI Biobank Directory
author = Dieuwke Roelofs-Prins
author_email = support@molgenis.org
license = LGPL-3.0-only
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/molgenis/molgenis-emx2/tools/directory/
project_urls =
    Source = https://github.com/molgenis/molgenis-emx2/tools/directory

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
python_requires = >=3.10

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    dataclasses
    molgenis-emx2-pyclient>=11.23.0
    requests>=2.21.0
    unidecode
    pyhandle>=1.3.1


[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here test requirements (semicolon/line-separated)
testing =
    setuptools
    pytest
    pytest-cov
    pytest-asyncio
    pytest-mock

[tool:pytest]
# Specify command line options as you would do when invoking pytest directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
# CAUTION: --cov flags may prohibit setting breakpoints while debugging.
#          Comment those flags to avoid this py.test issue.
addopts =
    --cov molgenis_emx2.directory_client --cov-report term-missing
    --verbose
    --junitxml junit.xml
asyncio_default_fixture_loop_scope="function"
norecursedirs =
    dist
    build
    .tox
testpaths = tests
# Use pytest markers to select/deselect specific tests
# markers =
#     slow: mark tests as slow (deselect with '-m "not slow"')
#     system: mark end-to-end system tests

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[bumpversion]
commit = False
tag = True
tag_name = {new_version}

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.0.2
package = directory_client
extensions =
    markdown
    namespace
    pre_commit
namespace = molgenis-emx2
