[bumpversion]
commit = False
tag = False
tag_name = {new_version}
current_version = 1.2.2
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+)(?P<build>\d+))?
serialize =
	{major}.{minor}.{patch}-{release}{build}
	{major}.{minor}.{patch}

[metadata]
name = molgenis-emx2-directory-client
description = MOLGENIS EMX2 Python tooling for a BBMRI Biobank Directory
author = Dieuwke Roelofs-Prins
author_email = support@molgenis.org
license = LGPL-3.0-only
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/molgenis/molgenis-emx2/tree/master/tools/directory/
project_urls =
	Source = https://github.com/molgenis/molgenis-emx2/tree/master/tools/directory/
platforms = any
classifiers =
	License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
	Programming Language :: Python
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.10

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
	=src
python_requires = >=3.10
install_requires =
	dataclasses
	molgenis-emx2-pyclient>=11.23.0
	requests>=2.21.0
	unidecode
	pyhandle>=1.3.1

[options.packages.find]
where = src
exclude =
	tests

[options.extras_require]
testing =
	setuptools
	pytest
	pytest-cov
	pytest-asyncio
	pytest-mock

[tool:pytest]
addopts =
	--cov molgenis_emx2.directory_client --cov-report term-missing
	--verbose
	--junitxml junit.xml
asyncio_default_fixture_loop_scope = "function"
norecursedirs =
	dist
	build
	.tox
testpaths = tests

[bdist_wheel]
universal = 1

[devpi:upload]
no_vcs = 1
formats = bdist_wheel

[flake8]
max_line_length = 88
extend_ignore = E203, W503
exclude =
	.tox
	build
	dist
	.eggs
	docs/conf.py

[bumpversion:part:release]
optional_value = prod
first_value = dev
values =
	dev
	prod

[bumpversion:part:build]

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:src/molgenis_emx2/directory_client/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[pyscaffold]
version = 4.0.2
package = directory_client
extensions =
	markdown
	namespace
	pre_commit
namespace = molgenis-emx2
