[project]
name = "emx2-hpc-daemon"
version = "0.1.0"
description = "HPC execution bridge daemon for MOLGENIS EMX2"
readme = "README.md"
requires-python = ">=3.11"
license = "LGPL-3.0-only"
dependencies = [
    "httpx>=0.27",
    "click>=8.1",
    "pyyaml>=6.0",
]

[project.scripts]
emx2-hpc-daemon = "emx2_hpc_daemon.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/emx2_hpc_daemon"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
]
e2e = [
    "pytest>=8.0",
    "pytest-timeout>=2.3",
    "httpx>=0.27",
]
