[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "Molgenis EMX2 Ontology Manager"
version = "0.1.7"
description = "Tool to manage catalogue ontologies on Molgenis EMX2 servers."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/molgenis/molgenis-emx2"
"Bug Tracker" = "https://github.com/molgenis/molgenis-emx2/issues"