[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "molgenis-emx2-ontomanager"
description = "Tool to manage catalogue ontologies on Molgenis EMX2 servers."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
]
dynamic = ["version", "dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {file = "version.txt"}

[project.urls]
"Homepage" = "https://github.com/molgenis/molgenis-emx2"
"Bug Tracker" = "https://github.com/molgenis/molgenis-emx2/issues"