# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = pyclient
description = molgenis py client functions
license = LGPL-3.0-only
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/molgenis/molgenis-emx2
project_urls =
    Source = https://github.com/molgenis/molgenis-emx2

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only

[semantic_release]
version_variable = setup.py:__version__
upload_to_pypi = false
upload_to_release = true
branch = main
