[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "molgenis-ontology-manager"
version = "0.0.1"
authors = [
  { name="Molgenis", email="support@molgenis.org" },
]
description = "Tool to manage catalogue ontologies on Molgenis servers."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/molgenis/molgenis-emx2"
"Bug Tracker" = "https://github.com/molgenis/molgenis-emx2/issues"